# Keyboard

./: README.md  READMEVER2.md  api.http  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: dictionary.rs  main.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.scss  App.tsx
frontend/src/components/: constants.ts
frontend/src/components/Error/: error.scss  index.tsx
frontend/src/components/InstructionModal/: index.tsx
frontend/src/components/Loading/: index.tsx  loading.scss
frontend/src/components/MechanicalKeyboard/: index.tsx  mechanicalKeyboard.scss
frontend/src/components/MechanicalKeyboard/Key3D/: index.tsx  key3D.scss
frontend/src/components/MobileKeyboard/: index.tsx  mobileKeyboard.scss
frontend/src/components/MobileKeyboard/Key2D/: index.tsx  key2D.scss
frontend/src/components/PredictionList/: PredictionListNote.tsx  index.tsx
frontend/src/components/Title/: index.tsx  title.scss
frontend/src/components/VirtualScreen/: index.tsx  virtualScreen.scss
frontend/src/hooks/: hooks.test.ts  hooks.ts
frontend/src/styles/: _variables.scss
frontend/src/utils/: utils.test.ts  utils.ts
