[package]
name = "word-search-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
trie-rs = { version = "0.4.2" }
axum = {version = "0.8.3"}
tokio = {version = "1.44.1", features = ["full"]}
serde = {version = "1.0"}
serde_json = {version = "1.0"}
tower-http = { version = "0.6.2", features = ["cors"] }